creacion y utilizacion de maps colores

--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,7 @@ header section {
 }
 header section p {
   font-size: 40px;
-  color: white;
+  color: black;
   font-weight: bold;
   font-family: "Times New Roman", Times, serif;
 }
