--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -47,18 +47,18 @@
             gap: 20px; 
             .plan-musc {
                 button {
-                    @include botones-planes (2px solid gray,15px,100px,200px,18px)
+                    @include botones-planes (2px solid map-get($colores,plan-musc),15px,100px,200px,18px)
                 }
                 button:hover {
-                    background-color: nth($colores,3);
+                    background-color: map-get($colores,color3);
                 }
             }
             .plan-squash {
                 button {
-                    @include botones-planes (2px solid black,15px,100px,200px,18px)
+                    @include botones-planes (2px solid map-get($colores,color2),15px,100px,200px,18px)
                 }
                 button:hover {
-                    background-color: nth($colores,3);
+                    background-color: map-get($colores,color3);
                 }
             }
         }
@@ -68,19 +68,19 @@
             gap: 20px; 
             .plan-boxeo {
                 button {
-                    @include botones-planes (2px solid rgb(199, 44, 44),15px,100px,200px,18px)
+                    @include botones-planes (2px solid map-get($colores,plan-boxeo),15px,100px,200px,18px)
                 }
             
                 button:hover {
-                    background-color: nth($colores,3);
+                    background-color: map-get($colores,color3);
                 }
             }
             .plan-muaythai {
                 button {
-                    @include botones-planes (2px solid gold,15px,100px,200px,18px)
+                    @include botones-planes (2px solid map-get($colores,plan-muaythai),15px,100px,200px,18px)
                 }
                 button:hover {
-                    background-color: nth($colores,3);
+                    background-color: map-get($colores,color3);
                 }
             }
         }
