--- a/scss/components/_responsive.scss
+++ b/scss/components/_responsive.scss
@@ -158,3 +158,50 @@
      }
     }
 }
+
+@media (max-width: 1400px) {
+    div {
+        .ejercicio {
+            display: grid;
+            grid-template-columns: 300px 300px;
+            grid-template-rows:  250px 250px 250px 250px 250px 250px;
+            grid-template-areas: 
+            'video1 video2'
+            'video5 video6'
+            'video9 video10'
+            'video3 video4'
+            'video7 video8'
+            'video11 video12';
+            justify-content: center;
+            gap: 130px;
+            height: 70vh;
+        }
+    }
+}
+@media (max-width: 800px) {
+    div {
+        .ejercicio {
+            display: grid;
+            grid-template-columns: 300px;
+            grid-template-rows:  250px 250px 250px 250px 250px 250px 250px 250px 250px 250px 250px 250px;
+            grid-template-areas: 
+            'video1'
+            'video2'
+            'video3'
+            'video4'
+            'video5'
+            'video6'
+            'video7'
+            'video8'
+            'video9'
+            'video10'
+            'video11'
+            'video12';
+            justify-content: center;
+            gap: 150px;
+            height: 140vh;
+            
+            
+        }
+    }
+}
