responsive de horarios

--- a/css/style.css
+++ b/css/style.css
@@ -559,6 +559,31 @@ h2 {
     height: 140vh;
   }
 }
+@media (max-width: 1350px) {
+  div .horarios div img {
+    display: none;
+  }
+  div .horarios div .tablets-y-menos {
+    font-size: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+  }
+  div .horarios .horarios-texto {
+    font-size: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+}
+@media screen and (min: 1350px) {
+  div .horarios div .tablets-y-menos {
+    display: none;
+  }
+  div .horarios .horarios-texto {
+    font-size: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+}
 /* Responsive */
 * {
   font-family: Arial, Helvetica, sans-serif;
