--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -47,18 +47,20 @@
             gap: 20px; 
             .plan-musc {
                 button {
-                    @include botones-planes (2px solid map-get($colores,plan-musc),15px,100px,200px,18px)
+                    @include botones-planes (2px solid map-get($colores,plan-musc),15px,100px,200px,18px);
+                    @extend %heartbeat;
                 }
-                button:hover:focus {
+                button:hover {
                     background-color: map-get($colores,color3);
                     cursor: pointer;
                 }
             }
             .plan-squash {
                 button {
-                    @include botones-planes (2px solid map-get($colores,color2),15px,100px,200px,18px)
+                    @include botones-planes (2px solid map-get($colores,color2),15px,100px,200px,18px);
+                    @extend %heartbeat;
                 }
-                button:hover:focus {
+                button:hover {
                     background-color: map-get($colores,color3);
                     cursor: pointer;
                 }
@@ -70,19 +72,21 @@
             gap: 20px; 
             .plan-boxeo {
                 button {
-                    @include botones-planes (2px solid map-get($colores,plan-boxeo),15px,100px,200px,18px)
+                    @include botones-planes (2px solid map-get($colores,plan-boxeo),15px,100px,200px,18px);
+                    @extend %heartbeat;
                 }
             
-                button:hover:focus {
+                button:hover {
                     background-color: map-get($colores,color3);
                     cursor: pointer;
                 }
             }
             .plan-muaythai {
                 button {
-                    @include botones-planes (2px solid map-get($colores,plan-muaythai),15px,100px,200px,18px)
+                    @include botones-planes (2px solid map-get($colores,plan-muaythai),15px,100px,200px,18px);
+                    @extend %heartbeat;
                 }
-                button:hover:focus {
+                button:hover {
                     background-color: map-get($colores,color3);
                     cursor: pointer;
                 }
