--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,7 +14,7 @@
 @import "components/miperfil";
 @import "components/rutinas";
 @import "components/responsive";
-
+@import "components/animaciones";
 
 
 
