--- a/scss/base/_extends.scss
+++ b/scss/base/_extends.scss
@@ -2,3 +2,8 @@
     width: 100%;
     height: 100%;
 }
+
+%heartbeat {
+	-webkit-animation: heartbeat 1.5s ease-in-out infinite both;
+	animation: heartbeat 1.5s ease-in-out infinite both;
+}
