--- a/scss/components/_rutinas.scss
+++ b/scss/components/_rutinas.scss
@@ -4,6 +4,7 @@
 
 .Contenedor-de-rutinas {
     width: 50%;
+    min-width: 200px;
     height: 500px;
     display: flex;
     flex-direction: column;
@@ -13,6 +14,7 @@
 .Rutina {
     height: 25%;
     width: 40%;
+    min-width: 200px;
     border: solid 3px black;
     margin: 10px;
     @include displays (flex, center, center)
@@ -25,6 +27,7 @@ h2 {
 .historial-de-rutinas {
     width: 50%;
     height: 500px;
+    min-width: 200px;
 }
 
 .contenedor-historial {
