--- a/scss/base/_mixin.scss
+++ b/scss/base/_mixin.scss
@@ -5,6 +5,8 @@
     height: $height;
     width: $width;
     font-size: $f-s;
+    -webkit-animation: heartbeat 1.5s ease-in-out infinite both;
+	animation: heartbeat 1.5s ease-in-out infinite both;
     
 }
 
