--- a/scss/components/_responsive.scss
+++ b/scss/components/_responsive.scss
@@ -91,8 +91,13 @@
 
 @media (max-width: 432px) {
     .pag-inicio {
+        
         .planes {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
             .planes1{
+                
                 .plan-musc {
                     button {
                         @include botones-planes (2px solid map-get($colores,plan-musc),15px,40px,80px,7px)
@@ -254,6 +259,8 @@
         }
   
  
+/* Responsive de rutinas */
+
 @media (max-width: 900px) {
     .rutinas {
         .contenedor-div{
