--- a/scss/components/_rutinas.scss
+++ b/scss/components/_rutinas.scss
@@ -1,23 +1,36 @@
 .contenedor-div {
-   @include displays (flex, center, center)
+   @include displays (flex, center, center);
+   display: flex;
+   justify-content: space-evenly;
 }
 
 .Contenedor-de-rutinas {
-    width: 50%;
-    min-width: 200px;
+    min-width: 500px;
     height: 500px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.Rutina {
+
+.rutina {
     height: 25%;
-    width: 40%;
-    min-width: 200px;
-    border: solid 3px black;
+    width: 200px;
     margin: 10px;
-    @include displays (flex, center, center)
+    @include displays (flex, center, center);
+   
+    button {
+        width: 100%;
+        height: 100%;
+        border: solid 3px black;
+        border-radius: 25px;
+        font-size: 20px;
+    }
+    button:hover {
+        font-size: 30px;
+        transition: 0.3s;
+        cursor: pointer;
+    }
 }
 
 h2 {
@@ -25,13 +38,21 @@ h2 {
 }
 
 .historial-de-rutinas {
-    width: 50%;
     height: 500px;
     min-width: 200px;
+    text-align: center;
 }
 
 .contenedor-historial {
     flex-direction: column;
-    @include displays (flex, center, center)
+    @include displays (flex, center, center);
+    .historial-rutina{
+        height: 25%;
+        width: 200px;
+        margin: 10px;
+        @include displays (flex, center, center);
+        border: solid 3px black;
+        border-radius: 25px;
+    }
 }
 
