--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -8,12 +8,19 @@ header {
     section  {
         display: flex;
         align-items: center;
-        p , .nombregimnasio {
+        .nombregimnasio {
             font-size: 40px;
             color: map-get($colores,color2);
             font-weight: bold;
             font-family:'Times New Roman', Times, serif;
-
+        }
+        p {
+            a{
+                font-size: 40px;
+                color: map-get($colores,color2);
+                font-weight: bold;
+                font-family:'Times New Roman', Times, serif; 
+            }
         }
         div {
             border-style: solid;
