cambios de responsive e imagenes

--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -15,7 +15,7 @@ footer {
                 @extend %img-full;
             }
         }
-        nav {
+        .redes-sociales {
             ul {
                 li{
                     list-style: none;
@@ -36,4 +36,5 @@ footer {
             }
         }
 }
+
 
