--- a/css/stlye.css
+++ b/css/stlye.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-.img-perfilhijo, .pag-inicio .img-der .imagen-container img, .pag-inicio .img-izq .imagen-container img, header div .img-perf-usuario .img-perfilhijo, header section div img, footer nav ul li div img, footer div img {
+.img-perfilhijo, .pag-inicio .img-der .imagen-container img, .pag-inicio .img-izq .imagen-container img, header div .img-perf-usuario .img-perfilhijo, header section div img, footer .redes-sociales ul li div img, footer div img {
   width: 100%;
   height: 100%;
 }
@@ -93,13 +93,13 @@ footer div {
   height: 120px;
   overflow: hidden;
 }
-footer nav ul li {
+footer .redes-sociales ul li {
   list-style: none;
   display: flex;
   align-items: center;
   justify-content: none;
 }
-footer nav ul li div {
+footer .redes-sociales ul li div {
   width: 40px;
   height: 40px;
   border-radius: 40px;
@@ -533,29 +533,37 @@ h2 {
 }
 /* Responsive de footer*/
 @media (max-width: 510px) {
+  footer div img {
+    display: none;
+  }
+  footer .redes-sociales ul li div {
+    width: 20px;
+    height: 20px;
+    border-radius: 20px;
+  }
+  footer .redes-sociales ul li a {
+    font-size: 15px;
+  }
+}
+@media (max-width: 1350px) {
   footer .pestañas-footer {
     display: none;
   }
   footer div {
-    width: 35px;
-    height: 35px;
-    border-radius: 35px;
+    border-radius: 20px;
+    width: 80px;
+    height: 50px;
     border-style: solid;
     border-color: #85c1e9;
     overflow: hidden;
-    margin-right: 10px;
-  }
-  footer .redes-sociales ul {
-    padding: 0px;
   }
   footer .redes-sociales ul li div {
-    display: none;
-  }
-  footer .redes-sociales ul li div img {
-    display: none;
+    width: 20px;
+    height: 20px;
+    border-radius: 20px;
   }
   footer .redes-sociales ul li a {
-    font-size: 10px;
+    font-size: 15px;
   }
 }
 /* Responsive de ejerciciopedia */
